# auto-code-tracing

./: Makefile  README.md  README2.md  README3.md  README_MCP.md  code_prompt.llm  colors.mk  extract_graph.py
agents/: clarifier.yaml  codegen.yaml  debugger.yaml  documenter.yaml  executor.yaml  integrator.yaml  memory.yaml  monitor.yaml  planner.yaml  pm.yaml  retriever.yaml  runner.yaml  scheduler.yaml  toolset.yaml
auto_code_tracing_crewai/: README.md  pyproject.toml  report.md
auto_code_tracing_crewai/src/auto_code_tracing_crewai/: crew.py  main.py
client/: main.go
configs/: config.yaml
python-injector/: debug_config.yaml.orig  generic_parser.py  inject_debug_llm.py  inject_debug_llm.py.orig  inject_debug_llm.py.orig.2  requirements.txt
python-injector/.debug_helpers/: serviceA_crypto_common.go.cached  serviceB_main.go.cached
python-injector/cache/: manager.py
python-injector/config/: manager.py
python-injector/core/: __init__.py  injector.py
python-injector/debug/: __init__.py  registry.py  snippet_injector.py  template_generator.py
python-injector/filesystem/: __init__.py  operations.py
python-injector/lint/: __init__.py  validator.py
python-injector/llm/: __init__.py  client.py  prompts.py  providers.py
python_injector/: __init__.py  debug_config.yaml  generic_parser.py  inject_debug_llm.py  utils.py
python_injector/cache/: __init__.py  (+1 more)
serviceA/: crypto_common.go  go.mod  main.go
serviceB/: main.go
software_builder/: Dockerfile  config.py  orchestrator.py  requirements.txt  run_crew.py  software_builder.py  tool_factory.py
(+41 files in other folders)
